refactor: 구분자를 일급 컬렉션으로 분리
BREAKING CHANGES: Delimiters.of()로 구분자 컬렉션을 생성하여 사용